--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "type": "module",
   "dependencies": {
-    "discord.js": "^13.2.0",
+    "@discordjs/builders": "^0.8.2",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "@twurple/api": "^5.0.7",
+    "@twurple/auth": "^5.0.7",
+    "@twurple/chat": "^5.0.7",
+    "@twurple/eventsub": "^5.0.7",
+    "@twurple/pubsub": "^5.0.7",
+    "discord-api-types": "^0.24.0",
+    "discord.js": "^13.3.0",
     "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^10.0.0",
     "node-hue-api": "^5.0.0-beta.8",
+    "resolve": "^1.20.0",
     "supervisor": "^0.12.0",
-    "tmi.js": "^1.8.5"
+    "tmi.js": "^1.8.5",
+    "twitch": "^4.6.7"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
