--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "resolve": "^1.20.0",
     "supervisor": "^0.12.0",
     "tmi.js": "^1.8.5",
-    "twitch": "^4.6.7"
+    "twitch": "^4.6.7",
+    "twitch-chat-client": "^4.6.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
