--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "supervisor": "^0.12.0",
     "tmi.js": "^1.8.5",
     "twitch": "^4.6.7",
-    "twitch-chat-client": "^4.6.7"
+    "twitch-auth-tmi": "^4.6.7",
+    "twitch-chat-client": "^4.6.7",
+    "twitch-eventsub": "^4.6.7",
+    "twitch-pubsub-client": "^4.6.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
