--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
-    "@twurple/api": "^5.0.9",
-    "@twurple/auth": "^5.0.9",
+    "@twurple/api": "^5.0.10",
+    "@twurple/auth": "^5.0.10",
     "@twurple/auth-tmi": "^5.0.9",
     "@twurple/chat": "^5.0.9",
-    "@twurple/eventsub": "^5.0.9",
+    "@twurple/eventsub": "^5.0.10",
+    "@twurple/eventsub-ngrok": "^5.0.10",
     "@twurple/pubsub": "^5.0.9",
     "axios": "^0.24.0",
     "discord-api-types": "^0.24.0",
