--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@twurple/eventsub": "^5.0.10",
     "@twurple/eventsub-ngrok": "^5.0.10",
     "@twurple/pubsub": "^5.0.9",
+    "audic": "^3.0.0",
     "axios": "^0.24.0",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
