--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@twurple/pubsub": "^5.0.9",
     "audic": "^3.0.0",
     "axios": "^0.24.0",
+    "countdown": "^2.6.0",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
