--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-hue-api": "^5.0.0-beta.8",
     "obs-websocket-js": "^4.0.3",
     "play-sound": "^1.1.4",
+    "tiltify-api-client": "^1.1.2",
     "we": "^0.3.2",
     "websocket": "^1.0.34"
   }
