--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "express": "^4.18.1",
     "fs-extra": "^10.0.0",
     "huejay": "^0.18.0",
+    "mongoose": "^6.3.3",
     "node-hue-api": "^5.0.0-beta.8",
     "obs-websocket-js": "^4.0.3",
     "play-sound": "^1.1.4",
