--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "express": "^4.18.1",
     "fs-extra": "^10.0.0",
     "huejay": "^0.18.0",
-    "mongoose": "^6.3.3",
+    "mongoose": "^6.3.4",
     "node-hue-api": "^5.0.0-beta.8",
+    "nodemon": "^2.0.16",
     "obs-websocket-js": "^4.0.3",
     "play-sound": "^1.1.4",
     "tiltify-api-client": "^1.1.2",
