--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^0.1.0-canary.0",
-    "@twurple/api": "^5.3.4",
-    "@twurple/auth": "^5.3.4",
-    "@twurple/auth-tmi": "^5.3.4",
-    "@twurple/chat": "^5.3.4",
+    "@twurple/api": "^6.2.0",
+    "@twurple/auth": "^6.2.0",
+    "@twurple/auth-tmi": "^6.2.0",
+    "@twurple/chat": "^6.2.0",
     "@twurple/eventsub": "^5.0.10",
-    "@twurple/eventsub-ngrok": "^5.3.4",
-    "@twurple/pubsub": "^5.3.4",
+    "@twurple/eventsub-http": "^6.2.0",
+    "@twurple/eventsub-ngrok": "^6.2.0",
+    "@twurple/pubsub": "^6.2.0",
     "axios": "^0.27.2",
     "countdown": "^2.6.0",
     "discord-api-types": "^0.33.1",
@@ -32,6 +33,7 @@
     "nodemon": "^2.0.16",
     "obs-websocket-js": "^4.0.3",
     "play-sound": "^1.1.4",
+    "socket.io": "^4.6.1",
     "tiltify-api-client": "^1.1.2",
     "we": "^0.3.2",
     "websocket": "^1.0.34"
