--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/rest": "^2.2.0",
     "@twurple/api": "^5.0.10",
     "@twurple/auth": "^5.0.10",
     "@twurple/auth-tmi": "^5.0.17",
@@ -32,7 +32,7 @@
     "nodemon": "^2.0.16",
     "obs-websocket-js": "^5.0.5",
     "play-sound": "^1.1.4",
-    "tiltify-api-client": "^1.1.2",
+    "tiltify-api-client": "^2.0.0",
     "we": "^0.3.2",
     "websocket": "^1.0.34"
   }
